fixed link spacing in navbar

--- a/src/App.css
+++ b/src/App.css
@@ -290,7 +290,7 @@ div .card,
 }
 
 .icons,
-i {
+.bottom {
   padding: 20px;
 }
 
